y.output
Terminals which are not used

   APOSTROPHE
   QUOTE
   ASPERAND
   EPSILON
   ERROR


Grammar

    0 $accept: program $end

    1 program: program_head program_declarations program_body

    2 program_head: PROGRAM ID program_parameters SEMICOLON

    3 program_declarations: declarations subprogram_declarations

    4 program_body: compound_statement PERIOD

    5 program_parameters: /* empty */
    6                   | LPAREN program_parameter_list RPAREN

    7 program_parameter_list: identifier_list

    8 identifier_list: ID
    9                | identifier_list COMMA ID

   10 declarations: /* empty */
   11             | declarations VAR identifier_list COLON type SEMICOLON

   12 type: standard_type
   13     | ARRAY LBRACKET INTLIT RANGE INTLIT RBRACKET OF standard_type

   14 standard_type: ID

   15 subprogram_declarations: /* empty */
   16                        | subprogram_declarations subprogram_declaration SEMICOLON

   17 subprogram_declaration: subprogram_head declarations compound_statement

   18 subprogram_head: FUNCTION ID subprogram_parameters COLON standard_type SEMICOLON
   19                | PROCEDURE ID subprogram_parameters SEMICOLON

   20 subprogram_parameters: /* empty */
   21                      | LPAREN parameter_list RPAREN

   22 parameter_list: identifier_list COLON type
   23               | parameter_list SEMICOLON identifier_list COLON type

   24 compound_statement: BEGAN optional_statements END

   25 optional_statements: /* empty */
   26                    | statement_list

   27 statement_list: statement
   28               | statement_list SEMICOLON statement

   29 statement: variable ASSIGN expression
   30          | procedure_statement
   31          | alternative_statement
   32          | iterative_statement
   33          | compound_statement

   34 alternative_statement: if_statement

   35 iterative_statement: while_statement
   36                    | repeat_statement
   37                    | for_statement

   38 if_statement: IF expression THEN statement ELSE statement

   39 while_statement: WHILE expression DO statement

   40 repeat_statement: REPEAT statement_list UNTIL expression

   41 for_statement: FOR variable ASSIGN expression TO expression DO statement
   42              | FOR variable ASSIGN expression DOWNTO expression DO statement

   43 variable: ID
   44         | ID LBRACKET expression RBRACKET

   45 procedure_statement: ID
   46                    | ID LPAREN expression_list RPAREN

   47 expression_list: expression
   48                | expression_list COMMA expression

   49 expression: simple_expression
   50           | simple_expression relop simple_expression

   51 relop: EQU
   52      | NEQ
   53      | LES
   54      | LEQ
   55      | GRT
   56      | GEQ

   57 simple_expression: term
   58                  | sign term

   59 sign: PLUS
   60     | MINUS

   61 simple_expression: simple_expression addop term

   62 addop: PLUS
   63      | MINUS
   64      | OR

   65 term: factor
   66     | term mulop factor

   67 mulop: STAR
   68      | SLASH
   69      | DIV
   70      | MOD
   71      | AND

   72 factor: ID
   73       | ID LBRACKET expression RBRACKET
   74       | ID LPAREN expression_list RPAREN
   75       | LPAREN expression RPAREN
   76       | NOT factor
   77       | INTLIT
   78       | REALIT
   79       | CHRLIT


Terminals, with rules where they appear

$end (0) 0
error (256)
AND (258) 71
ARRAY (259) 13
BEGAN (260) 24
DIV (261) 69
DO (262) 39 41 42
DOWNTO (263) 42
ELSE (264) 38
END (265) 24
FOR (266) 41 42
FUNCTION (267) 18
IF (268) 38
MOD (269) 70
NOT (270) 76
OF (271) 13
OR (272) 64
PROCEDURE (273) 19
PROGRAM (274) 2
REPEAT (275) 40
THEN (276) 38
TO (277) 41
UNTIL (278) 40
VAR (279) 11
WHILE (280) 39
EQU (281) 51
NEQ (282) 52
LES (283) 53
LEQ (284) 54
GRT (285) 55
GEQ (286) 56
PLUS (287) 59 62
MINUS (288) 60 63
STAR (289) 67
SLASH (290) 68
ASSIGN (291) 29 41 42
LPAREN (292) 6 21 46 74 75
RPAREN (293) 6 21 46 74 75
LBRACKET (294) 13 44 73
RBRACKET (295) 13 44 73
COLON (296) 11 18 22 23
SEMICOLON (297) 2 11 16 18 19 23 28
COMMA (298) 9 48
PERIOD (299) 4
RANGE (300) 13
ID (301) 2 8 9 14 18 19 43 44 45 46 72 73 74
INTLIT (302) 13 77
CHRLIT (303) 79
REALIT (304) 78
APOSTROPHE (305)
QUOTE (306)
ASPERAND (307)
EPSILON (308)
ERROR (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
program_head (57)
    on left: 2, on right: 1
program_declarations (58)
    on left: 3, on right: 1
program_body (59)
    on left: 4, on right: 1
program_parameters (60)
    on left: 5 6, on right: 2
program_parameter_list (61)
    on left: 7, on right: 6
identifier_list (62)
    on left: 8 9, on right: 7 9 11 22 23
declarations (63)
    on left: 10 11, on right: 3 11 17
type (64)
    on left: 12 13, on right: 11 22 23
standard_type (65)
    on left: 14, on right: 12 13 18
subprogram_declarations (66)
    on left: 15 16, on right: 3 16
subprogram_declaration (67)
    on left: 17, on right: 16
subprogram_head (68)
    on left: 18 19, on right: 17
subprogram_parameters (69)
    on left: 20 21, on right: 18 19
parameter_list (70)
    on left: 22 23, on right: 21 23
compound_statement (71)
    on left: 24, on right: 4 17 33
optional_statements (72)
    on left: 25 26, on right: 24
statement_list (73)
    on left: 27 28, on right: 26 28 40
statement (74)
    on left: 29 30 31 32 33, on right: 27 28 38 39 41 42
alternative_statement (75)
    on left: 34, on right: 31
iterative_statement (76)
    on left: 35 36 37, on right: 32
if_statement (77)
    on left: 38, on right: 34
while_statement (78)
    on left: 39, on right: 35
repeat_statement (79)
    on left: 40, on right: 36
for_statement (80)
    on left: 41 42, on right: 37
variable (81)
    on left: 43 44, on right: 29 41 42
procedure_statement (82)
    on left: 45 46, on right: 30
expression_list (83)
    on left: 47 48, on right: 46 48 74
expression (84)
    on left: 49 50, on right: 29 38 39 40 41 42 44 47 48 73 75
relop (85)
    on left: 51 52 53 54 55 56, on right: 50
simple_expression (86)
    on left: 57 58 61, on right: 49 50 61
sign (87)
    on left: 59 60, on right: 58
addop (88)
    on left: 62 63 64, on right: 61
term (89)
    on left: 65 66, on right: 57 58 61 66
mulop (90)
    on left: 67 68 69 70 71, on right: 66
factor (91)
    on left: 72 73 74 75 76 77 78 79, on right: 65 66 76


state 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program       go to state 2
    program_head  go to state 3


state 1

    2 program_head: PROGRAM . ID program_parameters SEMICOLON

    ID  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: program_head . program_declarations program_body

    $default  reduce using rule 10 (declarations)

    program_declarations  go to state 6
    declarations          go to state 7


state 4

    2 program_head: PROGRAM ID . program_parameters SEMICOLON

    LPAREN  shift, and go to state 8

    $default  reduce using rule 5 (program_parameters)

    program_parameters  go to state 9


state 5

    0 $accept: program $end .

    $default  accept


state 6

    1 program: program_head program_declarations . program_body

    BEGAN  shift, and go to state 10

    program_body        go to state 11
    compound_statement  go to state 12


state 7

    3 program_declarations: declarations . subprogram_declarations
   11 declarations: declarations . VAR identifier_list COLON type SEMICOLON

    VAR  shift, and go to state 13

    $default  reduce using rule 15 (subprogram_declarations)

    subprogram_declarations  go to state 14


state 8

    6 program_parameters: LPAREN . program_parameter_list RPAREN

    ID  shift, and go to state 15

    program_parameter_list  go to state 16
    identifier_list         go to state 17


state 9

    2 program_head: PROGRAM ID program_parameters . SEMICOLON

    SEMICOLON  shift, and go to state 18


state 10

   24 compound_statement: BEGAN . optional_statements END

    BEGAN   shift, and go to state 10
    FOR     shift, and go to state 19
    IF      shift, and go to state 20
    REPEAT  shift, and go to state 21
    WHILE   shift, and go to state 22
    ID      shift, and go to state 23

    $default  reduce using rule 25 (optional_statements)

    compound_statement     go to state 24
    optional_statements    go to state 25
    statement_list         go to state 26
    statement              go to state 27
    alternative_statement  go to state 28
    iterative_statement    go to state 29
    if_statement           go to state 30
    while_statement        go to state 31
    repeat_statement       go to state 32
    for_statement          go to state 33
    variable               go to state 34
    procedure_statement    go to state 35


state 11

    1 program: program_head program_declarations program_body .

    $default  reduce using rule 1 (program)


state 12

    4 program_body: compound_statement . PERIOD

    PERIOD  shift, and go to state 36


state 13

   11 declarations: declarations VAR . identifier_list COLON type SEMICOLON

    ID  shift, and go to state 15

    identifier_list  go to state 37


state 14

    3 program_declarations: declarations subprogram_declarations .
   16 subprogram_declarations: subprogram_declarations . subprogram_declaration SEMICOLON

    FUNCTION   shift, and go to state 38
    PROCEDURE  shift, and go to state 39

    $default  reduce using rule 3 (program_declarations)

    subprogram_declaration  go to state 40
    subprogram_head         go to state 41


state 15

    8 identifier_list: ID .

    $default  reduce using rule 8 (identifier_list)


state 16

    6 program_parameters: LPAREN program_parameter_list . RPAREN

    RPAREN  shift, and go to state 42


state 17

    7 program_parameter_list: identifier_list .
    9 identifier_list: identifier_list . COMMA ID

    COMMA  shift, and go to state 43

    $default  reduce using rule 7 (program_parameter_list)


state 18

    2 program_head: PROGRAM ID program_parameters SEMICOLON .

    $default  reduce using rule 2 (program_head)


state 19

   41 for_statement: FOR . variable ASSIGN expression TO expression DO statement
   42              | FOR . variable ASSIGN expression DOWNTO expression DO statement

    ID  shift, and go to state 44

    variable  go to state 45


state 20

   38 if_statement: IF . expression THEN statement ELSE statement

    NOT     shift, and go to state 46
    PLUS    shift, and go to state 47
    MINUS   shift, and go to state 48
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    expression         go to state 54
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


state 21

   40 repeat_statement: REPEAT . statement_list UNTIL expression

    BEGAN   shift, and go to state 10
    FOR     shift, and go to state 19
    IF      shift, and go to state 20
    REPEAT  shift, and go to state 21
    WHILE   shift, and go to state 22
    ID      shift, and go to state 23

    compound_statement     go to state 24
    statement_list         go to state 59
    statement              go to state 27
    alternative_statement  go to state 28
    iterative_statement    go to state 29
    if_statement           go to state 30
    while_statement        go to state 31
    repeat_statement       go to state 32
    for_statement          go to state 33
    variable               go to state 34
    procedure_statement    go to state 35


state 22

   39 while_statement: WHILE . expression DO statement

    NOT     shift, and go to state 46
    PLUS    shift, and go to state 47
    MINUS   shift, and go to state 48
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    expression         go to state 60
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


state 23

   43 variable: ID .
   44         | ID . LBRACKET expression RBRACKET
   45 procedure_statement: ID .
   46                    | ID . LPAREN expression_list RPAREN

    LPAREN    shift, and go to state 61
    LBRACKET  shift, and go to state 62

    ASSIGN    reduce using rule 43 (variable)
    $default  reduce using rule 45 (procedure_statement)


state 24

   33 statement: compound_statement .

    $default  reduce using rule 33 (statement)


state 25

   24 compound_statement: BEGAN optional_statements . END

    END  shift, and go to state 63


state 26

   26 optional_statements: statement_list .
   28 statement_list: statement_list . SEMICOLON statement

    SEMICOLON  shift, and go to state 64

    $default  reduce using rule 26 (optional_statements)


state 27

   27 statement_list: statement .

    $default  reduce using rule 27 (statement_list)


state 28

   31 statement: alternative_statement .

    $default  reduce using rule 31 (statement)


state 29

   32 statement: iterative_statement .

    $default  reduce using rule 32 (statement)


state 30

   34 alternative_statement: if_statement .

    $default  reduce using rule 34 (alternative_statement)


state 31

   35 iterative_statement: while_statement .

    $default  reduce using rule 35 (iterative_statement)


state 32

   36 iterative_statement: repeat_statement .

    $default  reduce using rule 36 (iterative_statement)


state 33

   37 iterative_statement: for_statement .

    $default  reduce using rule 37 (iterative_statement)


state 34

   29 statement: variable . ASSIGN expression

    ASSIGN  shift, and go to state 65


state 35

   30 statement: procedure_statement .

    $default  reduce using rule 30 (statement)


state 36

    4 program_body: compound_statement PERIOD .

    $default  reduce using rule 4 (program_body)


state 37

    9 identifier_list: identifier_list . COMMA ID
   11 declarations: declarations VAR identifier_list . COLON type SEMICOLON

    COLON  shift, and go to state 66
    COMMA  shift, and go to state 43


state 38

   18 subprogram_head: FUNCTION . ID subprogram_parameters COLON standard_type SEMICOLON

    ID  shift, and go to state 67


state 39

   19 subprogram_head: PROCEDURE . ID subprogram_parameters SEMICOLON

    ID  shift, and go to state 68


state 40

   16 subprogram_declarations: subprogram_declarations subprogram_declaration . SEMICOLON

    SEMICOLON  shift, and go to state 69


state 41

   17 subprogram_declaration: subprogram_head . declarations compound_statement

    $default  reduce using rule 10 (declarations)

    declarations  go to state 70


state 42

    6 program_parameters: LPAREN program_parameter_list RPAREN .

    $default  reduce using rule 6 (program_parameters)


state 43

    9 identifier_list: identifier_list COMMA . ID

    ID  shift, and go to state 71


state 44

   43 variable: ID .
   44         | ID . LBRACKET expression RBRACKET

    LBRACKET  shift, and go to state 62

    $default  reduce using rule 43 (variable)


state 45

   41 for_statement: FOR variable . ASSIGN expression TO expression DO statement
   42              | FOR variable . ASSIGN expression DOWNTO expression DO statement

    ASSIGN  shift, and go to state 72


state 46

   76 factor: NOT . factor

    NOT     shift, and go to state 46
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    factor  go to state 73


state 47

   59 sign: PLUS .

    $default  reduce using rule 59 (sign)


state 48

   60 sign: MINUS .

    $default  reduce using rule 60 (sign)


state 49

   75 factor: LPAREN . expression RPAREN

    NOT     shift, and go to state 46
    PLUS    shift, and go to state 47
    MINUS   shift, and go to state 48
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    expression         go to state 74
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


state 50

   72 factor: ID .
   73       | ID . LBRACKET expression RBRACKET
   74       | ID . LPAREN expression_list RPAREN

    LPAREN    shift, and go to state 75
    LBRACKET  shift, and go to state 76

    $default  reduce using rule 72 (factor)


state 51

   77 factor: INTLIT .

    $default  reduce using rule 77 (factor)


state 52

   79 factor: CHRLIT .

    $default  reduce using rule 79 (factor)


state 53

   78 factor: REALIT .

    $default  reduce using rule 78 (factor)


state 54

   38 if_statement: IF expression . THEN statement ELSE statement

    THEN  shift, and go to state 77


state 55

   49 expression: simple_expression .
   50           | simple_expression . relop simple_expression
   61 simple_expression: simple_expression . addop term

    OR     shift, and go to state 78
    EQU    shift, and go to state 79
    NEQ    shift, and go to state 80
    LES    shift, and go to state 81
    LEQ    shift, and go to state 82
    GRT    shift, and go to state 83
    GEQ    shift, and go to state 84
    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86

    $default  reduce using rule 49 (expression)

    relop  go to state 87
    addop  go to state 88


state 56

   58 simple_expression: sign . term

    NOT     shift, and go to state 46
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    term    go to state 89
    factor  go to state 58


state 57

   57 simple_expression: term .
   66 term: term . mulop factor

    AND    shift, and go to state 90
    DIV    shift, and go to state 91
    MOD    shift, and go to state 92
    STAR   shift, and go to state 93
    SLASH  shift, and go to state 94

    $default  reduce using rule 57 (simple_expression)

    mulop  go to state 95


state 58

   65 term: factor .

    $default  reduce using rule 65 (term)


state 59

   28 statement_list: statement_list . SEMICOLON statement
   40 repeat_statement: REPEAT statement_list . UNTIL expression

    UNTIL      shift, and go to state 96
    SEMICOLON  shift, and go to state 64


state 60

   39 while_statement: WHILE expression . DO statement

    DO  shift, and go to state 97


state 61

   46 procedure_statement: ID LPAREN . expression_list RPAREN

    NOT     shift, and go to state 46
    PLUS    shift, and go to state 47
    MINUS   shift, and go to state 48
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    expression_list    go to state 98
    expression         go to state 99
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


state 62

   44 variable: ID LBRACKET . expression RBRACKET

    NOT     shift, and go to state 46
    PLUS    shift, and go to state 47
    MINUS   shift, and go to state 48
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    expression         go to state 100
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


state 63

   24 compound_statement: BEGAN optional_statements END .

    $default  reduce using rule 24 (compound_statement)


state 64

   28 statement_list: statement_list SEMICOLON . statement

    BEGAN   shift, and go to state 10
    FOR     shift, and go to state 19
    IF      shift, and go to state 20
    REPEAT  shift, and go to state 21
    WHILE   shift, and go to state 22
    ID      shift, and go to state 23

    compound_statement     go to state 24
    statement              go to state 101
    alternative_statement  go to state 28
    iterative_statement    go to state 29
    if_statement           go to state 30
    while_statement        go to state 31
    repeat_statement       go to state 32
    for_statement          go to state 33
    variable               go to state 34
    procedure_statement    go to state 35


state 65

   29 statement: variable ASSIGN . expression

    NOT     shift, and go to state 46
    PLUS    shift, and go to state 47
    MINUS   shift, and go to state 48
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    expression         go to state 102
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


state 66

   11 declarations: declarations VAR identifier_list COLON . type SEMICOLON

    ARRAY  shift, and go to state 103
    ID     shift, and go to state 104

    type           go to state 105
    standard_type  go to state 106


state 67

   18 subprogram_head: FUNCTION ID . subprogram_parameters COLON standard_type SEMICOLON

    LPAREN  shift, and go to state 107

    $default  reduce using rule 20 (subprogram_parameters)

    subprogram_parameters  go to state 108


state 68

   19 subprogram_head: PROCEDURE ID . subprogram_parameters SEMICOLON

    LPAREN  shift, and go to state 107

    $default  reduce using rule 20 (subprogram_parameters)

    subprogram_parameters  go to state 109


state 69

   16 subprogram_declarations: subprogram_declarations subprogram_declaration SEMICOLON .

    $default  reduce using rule 16 (subprogram_declarations)


state 70

   11 declarations: declarations . VAR identifier_list COLON type SEMICOLON
   17 subprogram_declaration: subprogram_head declarations . compound_statement

    BEGAN  shift, and go to state 10
    VAR    shift, and go to state 13

    compound_statement  go to state 110


state 71

    9 identifier_list: identifier_list COMMA ID .

    $default  reduce using rule 9 (identifier_list)


state 72

   41 for_statement: FOR variable ASSIGN . expression TO expression DO statement
   42              | FOR variable ASSIGN . expression DOWNTO expression DO statement

    NOT     shift, and go to state 46
    PLUS    shift, and go to state 47
    MINUS   shift, and go to state 48
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    expression         go to state 111
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


state 73

   76 factor: NOT factor .

    $default  reduce using rule 76 (factor)


state 74

   75 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 112


state 75

   74 factor: ID LPAREN . expression_list RPAREN

    NOT     shift, and go to state 46
    PLUS    shift, and go to state 47
    MINUS   shift, and go to state 48
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    expression_list    go to state 113
    expression         go to state 99
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


state 76

   73 factor: ID LBRACKET . expression RBRACKET

    NOT     shift, and go to state 46
    PLUS    shift, and go to state 47
    MINUS   shift, and go to state 48
    LPAREN  shift, and go to state 49
    ID      shift, and go to state 50
    INTLIT  shift, and go to state 51
    CHRLIT  shift, and go to state 52
    REALIT  shift, and go to state 53

    expression         go to state 114
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


state 77

   38 if_statement: IF expression THEN . statement ELSE statement

    BEGAN   shift, and go to state 10
    FOR     shift, and go to state 19
    IF      shift, and go to state 20
    REPEAT  shift, and go to state 21
    WHILE   shift, and go to state 22
    ID      shift, and go to state 23
